...
        name="signals"
        options={{
          title: t('common.signals'),
          tabBarLabel: t('common.signals'),
          tabBarIcon: ({color}) => <AlertTriangle size={24} color={color} />,
          tabBarBadge: closedSignalsCount > 0 ? closedSignalsCount : undefined,
          tabBarButtonTestID: 'signalsTabButton',
          headerTitle: () => (
            <TabHeader title={t('signals.title')} showActionIcon={false} ActionIcon={Plus} />
          ),
        }}
      />
      <Tabs.Screen
...
